--- a/src/scss/components/landing/background/backdrop/about/_about.scss
+++ b/src/scss/components/landing/background/backdrop/about/_about.scss
@@ -5,7 +5,7 @@
     min-height: 796px;
 
     @include respond(tab-land) {
-      min-height: 1200vh;
+      min-height: 1100vh;
     }
   }
 
